Completed the functions names

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -378,20 +378,20 @@ alias BU.HeaderYellow='BU.Main.Headers.Header.Yellow';
 
 # NEW COLORS (SINCE 2022 01 07)
 
-alias BU.HeaderAqua='BU.Main.Headers.Header.';
-alias BU.HeaderFuchsia='BU.Main.Headers.Header.';
-alias BU.HeaderLime='BU.Main.Headers.Header.';
+alias BU.HeaderAqua='BU.Main.Headers.Header.Aqua';
+alias BU.HeaderFuchsia='BU.Main.Headers.Header.Fuchsia';
+alias BU.HeaderLime='BU.Main.Headers.Header.Lime';
 
-alias BU.HeaderMaroon='BU.Main.Headers.Header.';
-alias BU.HeaderNavy='BU.Main.Headers.Header.';
-alias BU.HeaderOlive='BU.Main.Headers.Header.';
+alias BU.HeaderMaroon='BU.Main.Headers.Header.Maroon';
+alias BU.HeaderNavy='BU.Main.Headers.Header.Navy';
+alias BU.HeaderOlive='BU.Main.Headers.Header.Olive';
 
-alias BU.HeaderSalmon='BU.Main.Headers.Header.';
-alias BU.HeaderSilver='BU.Main.Headers.Header.';
-alias BU.HeaderTan='BU.Main.Headers.Header.';
+alias BU.HeaderSalmon='BU.Main.Headers.Header.Salmon';
+alias BU.HeaderSilver='BU.Main.Headers.Header.Silver';
+alias BU.HeaderTan='BU.Main.Headers.Header.Tan';
 
-alias BU.HeaderTeal='BU.Main.Headers.Header.';
-alias BU.HeaderViolet='BU.Main.Headers.Header.';
+alias BU.HeaderTeal='BU.Main.Headers.Header.Teal';
+alias BU.HeaderViolet='BU.Main.Headers.Header.Violet';
 
 # -----------------------------------------------
 
@@ -406,35 +406,35 @@ alias BU.HeaderViolet='BU.Main.Headers.Header.';
 
 ## AQUA BLUE LINES, DIFFERENTLY COLORED TEXT
 
-alias BU.HeaderAquaBlack='BU.Main.Headers.Header.';
-alias BU.HeaderAquaBlue='BU.Main.Headers.Header.';
-alias BU.HeaderAquaCyan='BU.Main.Headers.Header.';
+alias BU.HeaderAquaBlack='BU.Main.Headers.Header.Aqua.Black';
+alias BU.HeaderAquaBlue='BU.Main.Headers.Header.Aqua.Blue';
+alias BU.HeaderAquaCyan='BU.Main.Headers.Header.Aqua.Cyan';
 
-alias BU.HeaderAquaFuchsia='BU.Main.Headers.Header.';
-alias BU.HeaderAquaGray='BU.Main.Headers.Header.';
-alias BU.HeaderAquaGreen='BU.Main.Headers.Header.';
+alias BU.HeaderAquaFuchsia='BU.Main.Headers.Header.Aqua.Fuchsia';
+alias BU.HeaderAquaGray='BU.Main.Headers.Header.Aqua.Gray';
+alias BU.HeaderAquaGreen='BU.Main.Headers.Header.Aqua.Green';
 
-alias BU.HeaderAquaLime='BU.Main.Headers.Header.';
-alias BU.HeaderAquaMaroon='BU.Main.Headers.Header.';
-alias BU.HeaderAquaNavy='BU.Main.Headers.Header.';
+alias BU.HeaderAquaLime='BU.Main.Headers.Header.Aqua.Lime';
+alias BU.HeaderAquaMaroon='BU.Main.Headers.Header.Aqua.Maroon';
+alias BU.HeaderAquaNavy='BU.Main.Headers.Header.Aqua.Navy';
 
-alias BU.HeaderAquaOlive='BU.Main.Headers.Header.';
-alias BU.HeaderAquaOrange='BU.Main.Headers.Header.';
-alias BU.HeaderAquaPink='BU.Main.Headers.Header.';
+alias BU.HeaderAquaOlive='BU.Main.Headers.Header.Aqua.Olive';
+alias BU.HeaderAquaOrange='BU.Main.Headers.Header.Aqua.Orange';
+alias BU.HeaderAquaPink='BU.Main.Headers.Header.Aqua.Pink';
 
-alias BU.HeaderAquaPurple='BU.Main.Headers.Header.';
-alias BU.HeaderAquaRed='BU.Main.Headers.Header.';
-alias BU.HeaderAquaSalmon='BU.Main.Headers.Header.';
+alias BU.HeaderAquaPurple='BU.Main.Headers.Header.Aqua.Purple';
+alias BU.HeaderAquaRed='BU.Main.Headers.Header.Aqua.Red';
+alias BU.HeaderAquaSalmon='BU.Main.Headers.Header.Aqua.Salmon';
 
-alias BU.HeaderAquaSilver='BU.Main.Headers.Header.';
-alias BU.HeaderAquaTan='BU.Main.Headers.Header.';
-alias BU.HeaderAquaTeal='BU.Main.Headers.Header.';
+alias BU.HeaderAquaSilver='BU.Main.Headers.Header.Aqua.Silver';
+alias BU.HeaderAquaTan='BU.Main.Headers.Header.Aqua.Tan';
+alias BU.HeaderAquaTeal='BU.Main.Headers.Header.Aqua.Teal';
 
-alias BU.HeaderAquaTurquoise='BU.Main.Headers.Header.';
-alias BU.HeaderAquaViolet='BU.Main.Headers.Header.';
-alias BU.HeaderAquaWhite='BU.Main.Headers.Header.';
+alias BU.HeaderAquaTurquoise='BU.Main.Headers.Header.Aqua.Turquoise';
+alias BU.HeaderAquaViolet='BU.Main.Headers.Header.Aqua.Violet';
+alias BU.HeaderAquaWhite='BU.Main.Headers.Header.Aqua.White';
 
-alias BU.HeaderAquaYellow='BU.Main.Headers.Header.';
+alias BU.HeaderAquaYellow='BU.Main.Headers.Header.Aqua.Yellow';
 
 # -----------------------------------------------
 
@@ -848,137 +848,137 @@ alias BU.HeaderPinkYellow='BU.Main.Headers.Header.Pink.';
 
 ## PURPLE LINES, DIFFERENTLY COLORED TEXT
 
-alias BU.HeaderPurpleAqua='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleBlack='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleBlue='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleAqua='BU.Main.Headers.Header.Purple.Aqua';
+alias BU.HeaderPurpleBlack='BU.Main.Headers.Header.Purple.Black';
+alias BU.HeaderPurpleBlue='BU.Main.Headers.Header.Purple.Blue';
 
-alias BU.HeaderPurpleCyan='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleFuchsia='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleGray='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleCyan='BU.Main.Headers.Header.Purple.Cyan';
+alias BU.HeaderPurpleFuchsia='BU.Main.Headers.Header.Purple.Fuchsia';
+alias BU.HeaderPurpleGray='BU.Main.Headers.Header.Purple.Gray';
 
-alias BU.HeaderPurpleGreen='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleLime='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleMaroon='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleGreen='BU.Main.Headers.Header.Purple.Green';
+alias BU.HeaderPurpleLime='BU.Main.Headers.Header.Purple.Lime';
+alias BU.HeaderPurpleMaroon='BU.Main.Headers.Header.Purple.Maroon';
 
-alias BU.HeaderPurpleNavy='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleOlive='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleOrange='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleNavy='BU.Main.Headers.Header.Purple.Navy';
+alias BU.HeaderPurpleOlive='BU.Main.Headers.Header.Purple.Olive';
+alias BU.HeaderPurpleOrange='BU.Main.Headers.Header.Purple.Orange';
 
-alias BU.HeaderPurplePink='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleRed='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleSalmon='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurplePink='BU.Main.Headers.Header.Purple.Pink';
+alias BU.HeaderPurpleRed='BU.Main.Headers.Header.Purple.Red';
+alias BU.HeaderPurpleSalmon='BU.Main.Headers.Header.Purple.Salmon';
 
-alias BU.HeaderPurpleSilver='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleTan='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleTeal='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleSilver='BU.Main.Headers.Header.Purple.Silver';
+alias BU.HeaderPurpleTan='BU.Main.Headers.Header.Purple.Tan';
+alias BU.HeaderPurpleTeal='BU.Main.Headers.Header.Purple.Teal';
 
-alias BU.HeaderPurpleTurquoise='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleViolet='BU.Main.Headers.Header.Purple.';
-alias BU.HeaderPurpleWhite='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleTurquoise='BU.Main.Headers.Header.Purple.Turquoise';
+alias BU.HeaderPurpleViolet='BU.Main.Headers.Header.Purple.Violet';
+alias BU.HeaderPurpleWhite='BU.Main.Headers.Header.Purple.White';
 
-alias BU.HeaderPurpleYellow='BU.Main.Headers.Header.Purple.';
+alias BU.HeaderPurpleYellow='BU.Main.Headers.Header.Purple.Yellow';
 
 # -----------------------------------------------
 
 ## RED LINES, DIFFERENTLY COLORED TEXT
 
-alias BU.HeaderRedAqua='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedBlack='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedBlue='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedAqua='BU.Main.Headers.Header.Red.Aqua';
+alias BU.HeaderRedBlack='BU.Main.Headers.Header.Red.Black';
+alias BU.HeaderRedBlue='BU.Main.Headers.Header.Red.Blue';
 
-alias BU.HeaderRedCyan='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedFuchsia='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedGray='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedCyan='BU.Main.Headers.Header.Red.Cyan';
+alias BU.HeaderRedFuchsia='BU.Main.Headers.Header.Red.Fuchsia';
+alias BU.HeaderRedGray='BU.Main.Headers.Header.Red.Gray';
 
-alias BU.HeaderRedGreen='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedLime='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedMaroon='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedGreen='BU.Main.Headers.Header.Red.Green';
+alias BU.HeaderRedLime='BU.Main.Headers.Header.Red.Lime';
+alias BU.HeaderRedMaroon='BU.Main.Headers.Header.Red.Maroon';
 
-alias BU.HeaderRedNavy='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedOlive='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedOrange='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedNavy='BU.Main.Headers.Header.Red.Navy';
+alias BU.HeaderRedOlive='BU.Main.Headers.Header.Red.Olive';
+alias BU.HeaderRedOrange='BU.Main.Headers.Header.Red.Orange';
 
-alias BU.HeaderRedPink='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedPurple='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedSalmon='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedPink='BU.Main.Headers.Header.Red.Pink';
+alias BU.HeaderRedPurple='BU.Main.Headers.Header.Red.Purple';
+alias BU.HeaderRedSalmon='BU.Main.Headers.Header.Red.Salmon';
 
-alias BU.HeaderRedSilver='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedTan='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedTeal='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedSilver='BU.Main.Headers.Header.Red.Silver';
+alias BU.HeaderRedTan='BU.Main.Headers.Header.Red.Tan';
+alias BU.HeaderRedTeal='BU.Main.Headers.Header.Red.Teal';
 
-alias BU.HeaderRedTurquoise='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedViolet='BU.Main.Headers.Header.Red.';
-alias BU.HeaderRedWhite='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedTurquoise='BU.Main.Headers.Header.Red.Turquoise';
+alias BU.HeaderRedViolet='BU.Main.Headers.Header.Red.Violet';
+alias BU.HeaderRedWhite='BU.Main.Headers.Header.Red.White';
 
-alias BU.HeaderRedYellow='BU.Main.Headers.Header.Red.';
+alias BU.HeaderRedYellow='BU.Main.Headers.Header.Red.Yellow';
 
 # -----------------------------------------------
 
 ## SALMON LINES, DIFFERENTLY COLORED TEXT
 
-alias BU.HeaderSalmonAqua='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonBlack='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonBlue='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonAqua='BU.Main.Headers.Header.Salmon.Aqua';
+alias BU.HeaderSalmonBlack='BU.Main.Headers.Header.Salmon.Black';
+alias BU.HeaderSalmonBlue='BU.Main.Headers.Header.Salmon.Blue';
 
-alias BU.HeaderSalmonCyan='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonFuchsia='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonGray='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonCyan='BU.Main.Headers.Header.Salmon.Cyan';
+alias BU.HeaderSalmonFuchsia='BU.Main.Headers.Header.Salmon.Fuchsia';
+alias BU.HeaderSalmonGray='BU.Main.Headers.Header.Salmon.Gray';
 
-alias BU.HeaderSalmonGreen='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonLime='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonMaroon='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonGreen='BU.Main.Headers.Header.Salmon.Green';
+alias BU.HeaderSalmonLime='BU.Main.Headers.Header.Salmon.Lime';
+alias BU.HeaderSalmonMaroon='BU.Main.Headers.Header.Salmon.Maroon';
 
-alias BU.HeaderSalmonNavy='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonOlive='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonOrange='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonNavy='BU.Main.Headers.Header.Salmon.Navy';
+alias BU.HeaderSalmonOlive='BU.Main.Headers.Header.Salmon.Olive';
+alias BU.HeaderSalmonOrange='BU.Main.Headers.Header.Salmon.Orange';
 
-alias BU.HeaderSalmonPink='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonPurple='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonRed='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonPink='BU.Main.Headers.Header.Salmon.Pink';
+alias BU.HeaderSalmonPurple='BU.Main.Headers.Header.Salmon.Purple';
+alias BU.HeaderSalmonRed='BU.Main.Headers.Header.Salmon.Red';
 
-alias BU.HeaderSalmonSalmon='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonTeal='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonTan='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonSilver='BU.Main.Headers.Header.Salmon.Silver';
+alias BU.HeaderSalmonTeal='BU.Main.Headers.Header.Salmon.Teal';
+alias BU.HeaderSalmonTan='BU.Main.Headers.Header.Salmon.Tan';
 
-alias BU.HeaderSalmonTurquoise='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonViolet='BU.Main.Headers.Header.Salmon.';
-alias BU.HeaderSalmonWhite='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonTurquoise='BU.Main.Headers.Header.Salmon.Turquoise';
+alias BU.HeaderSalmonViolet='BU.Main.Headers.Header.Salmon.Violet';
+alias BU.HeaderSalmonWhite='BU.Main.Headers.Header.Salmon.White';
 
-alias BU.HeaderSalmonYellow='BU.Main.Headers.Header.Salmon.';
+alias BU.HeaderSalmonYellow='BU.Main.Headers.Header.Salmon.Yellow';
 
 # -----------------------------------------------
 
 ## SILVER LINES, DIFFERENTLY COLORED TEXT
 
-alias BU.HeaderSilverAqua='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverBlack='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverBlue='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverAqua='BU.Main.Headers.Header.Silver.Aqua';
+alias BU.HeaderSilverBlack='BU.Main.Headers.Header.Silver.Black';
+alias BU.HeaderSilverBlue='BU.Main.Headers.Header.Silver.Blue';
 
-alias BU.HeaderSilverCyan='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverFuchsia='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverGray='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverCyan='BU.Main.Headers.Header.Silver.Cyan';
+alias BU.HeaderSilverFuchsia='BU.Main.Headers.Header.Silver.Fuchsia';
+alias BU.HeaderSilverGray='BU.Main.Headers.Header.Silver.Gray';
 
-alias BU.HeaderSilverGreen='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverLime='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverMaroon='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverGreen='BU.Main.Headers.Header.Silver.Green';
+alias BU.HeaderSilverLime='BU.Main.Headers.Header.Silver.Lime';
+alias BU.HeaderSilverMaroon='BU.Main.Headers.Header.Silver.Maroon';
 
-alias BU.HeaderSilverNavy='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverOlive='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverOrange='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverNavy='BU.Main.Headers.Header.Silver.Navy';
+alias BU.HeaderSilverOlive='BU.Main.Headers.Header.Silver.Olive';
+alias BU.HeaderSilverOrange='BU.Main.Headers.Header.Silver.Orange';
 
-alias BU.HeaderSilverPink='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverPurple='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverRed='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverPink='BU.Main.Headers.Header.Silver.Pink';
+alias BU.HeaderSilverPurple='BU.Main.Headers.Header.Silver.Purple';
+alias BU.HeaderSilverRed='BU.Main.Headers.Header.Silver.Red';
 
-alias BU.HeaderSilverSalmon='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverTeal='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverTan='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverSalmon='BU.Main.Headers.Header.Silver.Salmon';
+alias BU.HeaderSilverTeal='BU.Main.Headers.Header.Silver.Teal';
+alias BU.HeaderSilverTan='BU.Main.Headers.Header.Silver.Tan';
 
-alias BU.HeaderSilverTurquoise='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverViolet='BU.Main.Headers.Header.Silver.';
-alias BU.HeaderSilverWhite='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverTurquoise='BU.Main.Headers.Header.Silver.Turquoise';
+alias BU.HeaderSilverViolet='BU.Main.Headers.Header.Silver.Violet';
+alias BU.HeaderSilverWhite='BU.Main.Headers.Header.Silver.White';
 
-alias BU.HeaderSilverYellow='BU.Main.Headers.Header.Silver.';
+alias BU.HeaderSilverYellow='BU.Main.Headers.Header.Silver.Yellow';
 
 # -----------------------------------------------
 
