Renaming many functions and added the 'BU.Main.Files.DeleteFile()' function

--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -26,8 +26,8 @@ function BU.Main.ModConfig.Filesystem.PrintFSLengthDescription()
 #### PROCESSING FILE SYSTEM'S INFORMATIONS
 
 # Getting the file system's name with the "df" command, and parsing the output list according to the operating system's command version.
-BU.IsOSHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
-BU.IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
+BU.Main.OS.IsOSHaiku && __BU_MAIN_FS_NAME="$(df "$0" | awk 'FNR == 4 {print $3}')";
+BU.Main.OS.IsOSLinux && __BU_MAIN_FS_NAME="$(df -Th "$0" | awk 'FNR == 2 {print $2}')";
 
 ## EXT2 FILE SYSTEM'S INFORMATIONS
 
