--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -38,7 +38,7 @@ function GetProjectFilePath()
     local find_path;
         find_path="$(BU.ModuleInit.FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PARENT")" || \
         {
-            echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; exit 1;
+            echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; BU.Main.Errors.Exit 1;
         }; pwd)" "$v_cut")";
 
     #**** Code ****
