Renamed the OS functions

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -1225,24 +1225,25 @@ alias BU.HeaderYellowWhite='BU.Main.Headers.Header.Yellow.White';
 
 ## SUB-CATEGORY : "GENERAL OS VERSIONS CHECKINGS"
 
-alias BU.IsOSAndroidTermux='BU.Main.OS.IsOSAndroidTermux';
-alias BU.IsOSFreeBSD='BU.Main.OS.IsOSFreeBSD';
-alias BU.IsOSHaiku='BU.Main.OS.IsOSHaiku';
+alias BU.IsOSAndroidTermux='BU.Main.OS.IsAndroidTermux';
+alias BU.IsOSChromeOS='BU.Main.OS.IsChromeOS';
+alias BU.IsOSFreeBSD='BU.Main.OS.IsFreeBSD';
 
-alias BU.IsOSOpenBSD='BU.Main.OS.IsOSOpenBSD';
-alias BU.IsOSLinux='BU.Main.OS.IsOSLinux';
-alias BU.IsOSLinuxWSL='BU.Main.OS.IsOSLinuxWSL';
+alias BU.IsOSHaiku='BU.Main.OS.IsHaiku';
+alias BU.IsOSOpenBSD='BU.Main.OS.IsOpenBSD';
+alias BU.IsOSLinux='BU.Main.OS.IsLinux';
 
+alias BU.IsOSLinuxWSL='BU.Main.OS.IsLinuxWSL';
 alias BU.IsOSX='BU.Main.OS.IsOSX';
-alias BU.IsOSLinuxDistroArchLinux='BU.Main.OS.IsOSLinuxDistroArchLinux';
-alias BU.IsOSLinuxDistroDebian='BU.Main.OS.IsOSLinuxDistroDebian';
+alias BU.IsOSLinuxDistroArchLinux='BU.Main.OS.IsLinuxDistroArchLinux';
 
-alias BU.IsOSLinuxDistroFedora='BU.Main.OS.IsOSLinuxDistroFedora';
-alias BU.IsOSLinuxDistroLinuxMint='BU.Main.OS.IsOSLinuxDistroLinuxMint';
-alias BU.IsOSLinuxDistroManjaro='BU.Main.OS.IsOSLinuxDistroManjaro';
+alias BU.IsOSLinuxDistroDebian='BU.Main.OS.IsLinuxDistroDebian';
+alias BU.IsOSLinuxDistroFedora='BU.Main.OS.IsLinuxDistroFedora';
+alias BU.IsOSLinuxDistroLinuxMint='BU.Main.OS.IsLinuxDistroLinuxMint';
 
-alias BU.IsOSLinuxDistroSUSE='BU.Main.OS.IsOSLinuxDistroSUSE';
-alias BU.IsOSLinuxDistroUbuntu='BU.Main.OS.IsOSLinuxDistroUbuntu';
+alias BU.IsOSLinuxDistroManjaro='BU.Main.OS.IsLinuxDistroManjaro';
+alias BU.IsOSLinuxDistroSUSE='BU.Main.OS.IsLinuxDistroSUSE';
+alias BU.IsOSLinuxDistroUbuntu='BU.Main.OS.IsLinuxDistroUbuntu';
 
 # -----------------------------------------------
 
@@ -1250,33 +1251,33 @@ alias BU.IsOSLinuxDistroUbuntu='BU.Main.OS.IsOSLinuxDistroUbuntu';
 
 # Checking debian versions.
 alias BU.IsOSLinuxDistroDebian6='';
-alias BU.IsOSLinuxDistroDebian7='BU.Main.OS.IsOSLinuxDistroDebian7';
-alias BU.IsOSLinuxDistroDebian8='BU.Main.OS.IsOSLinuxDistroDebian8';
-alias BU.IsOSLinuxDistroDebian9='BU.Main.OS.IsOSLinuxDistroDebian9';
-alias BU.IsOSLinuxDistroDebian10='BU.Main.OS.IsOSLinuxDistroDebian10';
-alias BU.IsOSLinuxDistroDebian11='BU.Main.OS.IsOSLinuxDistroDebian11';
+alias BU.IsOSLinuxDistroDebian7='BU.Main.OS.IsLinuxDistroDebian7';
+alias BU.IsOSLinuxDistroDebian8='BU.Main.OS.IsLinuxDistroDebian8';
+alias BU.IsOSLinuxDistroDebian9='BU.Main.OS.IsLinuxDistroDebian9';
+alias BU.IsOSLinuxDistroDebian10='BU.Main.OS.IsLinuxDistroDebian10';
+alias BU.IsOSLinuxDistroDebian11='BU.Main.OS.IsLinuxDistroDebian11';
 
 # Checking Fedora versions.
-alias BU.IsOSLinuxDistroFedora28='BU.Main.OS.IsOSLinuxDistroFedora28';
-alias BU.IsOSLinuxDistroFedora29='BU.Main.OS.IsOSLinuxDistroFedora29';
-alias BU.IsOSLinuxDistroFedora30='BU.Main.OS.IsOSLinuxDistroFedora30';
-alias BU.IsOSLinuxDistroFedora31='BU.Main.OS.IsOSLinuxDistroFedora31';
-alias BU.IsOSLinuxDistroFedora32='BU.Main.OS.IsOSLinuxDistroFedora32';
-alias BU.IsOSLinuxDistroFedora33='BU.Main.OS.IsOSLinuxDistroFedora33';
-alias BU.IsOSLinuxDistroFedora34='BU.Main.OS.IsOSLinuxDistroFedora34';
-alias BU.IsOSLinuxDistroFedora35='BU.Main.OS.IsOSLinuxDistroFedora35';
-alias BU.IsOSLinuxDistroFedora36='BU.Main.OS.IsOSLinuxDistroFedora36';
+alias BU.IsOSLinuxDistroFedora28='BU.Main.OS.IsLinuxDistroFedora28';
+alias BU.IsOSLinuxDistroFedora29='BU.Main.OS.IsLinuxDistroFedora29';
+alias BU.IsOSLinuxDistroFedora30='BU.Main.OS.IsLinuxDistroFedora30';
+alias BU.IsOSLinuxDistroFedora31='BU.Main.OS.IsLinuxDistroFedora31';
+alias BU.IsOSLinuxDistroFedora32='BU.Main.OS.IsLinuxDistroFedora32';
+alias BU.IsOSLinuxDistroFedora33='BU.Main.OS.IsLinuxDistroFedora33';
+alias BU.IsOSLinuxDistroFedora34='BU.Main.OS.IsLinuxDistroFedora34';
+alias BU.IsOSLinuxDistroFedora35='BU.Main.OS.IsLinuxDistroFedora35';
+alias BU.IsOSLinuxDistroFedora36='BU.Main.OS.IsLinuxDistroFedora36';
 
 # Checking Ubuntu versions.
-alias BU.IsOSLinuxDistroUbuntu1804='BU.Main.OS.IsOSLinuxDistroUbuntu1804';
-alias BU.IsOSLinuxDistroUbuntu1810='BU.Main.OS.IsOSLinuxDistroUbuntu1810';
-alias BU.IsOSLinuxDistroUbuntu1904='BU.Main.OS.IsOSLinuxDistroUbuntu1904';
-alias BU.IsOSLinuxDistroUbuntu1910='BU.Main.OS.IsOSLinuxDistroUbuntu1910';
-alias BU.IsOSLinuxDistroUbuntu2004='BU.Main.OS.IsOSLinuxDistroUbuntu2004';
-alias BU.IsOSLinuxDistroUbuntu2010='BU.Main.OS.IsOSLinuxDistroUbuntu2010';
-alias BU.IsOSLinuxDistroUbuntu2104='BU.Main.OS.IsOSLinuxDistroUbuntu2104';
-alias BU.IsOSLinuxDistroUbuntu2110='BU.Main.OS.IsOSLinuxDistroUbuntu2110';
-alias BU.IsOSLinuxDistroUbuntu2204='BU.Main.OS.IsOSLinuxDistroUbuntu2204';
+alias BU.IsOSLinuxDistroUbuntu1804='BU.Main.OS.IsLinuxDistroUbuntu1804';
+alias BU.IsOSLinuxDistroUbuntu1810='BU.Main.OS.IsLinuxDistroUbuntu1810';
+alias BU.IsOSLinuxDistroUbuntu1904='BU.Main.OS.IsLinuxDistroUbuntu1904';
+alias BU.IsOSLinuxDistroUbuntu1910='BU.Main.OS.IsLinuxDistroUbuntu1910';
+alias BU.IsOSLinuxDistroUbuntu2004='BU.Main.OS.IsLinuxDistroUbuntu2004';
+alias BU.IsOSLinuxDistroUbuntu2010='BU.Main.OS.IsLinuxDistroUbuntu2010';
+alias BU.IsOSLinuxDistroUbuntu2104='BU.Main.OS.IsLinuxDistroUbuntu2104';
+alias BU.IsOSLinuxDistroUbuntu2110='BU.Main.OS.IsLinuxDistroUbuntu2110';
+alias BU.IsOSLinuxDistroUbuntu2204='BU.Main.OS.IsLinuxDistroUbuntu2204';
 
 # -----------------------------------------------
 
@@ -1293,10 +1294,10 @@ alias BU.IsOSXCatalina='BU.Main.OS.IsOSXCatalina';
 
 # SUB-CATEGORY : "SPECIFIC OS VERSIONS CHECKINGS (WINDOWS)"
 
-alias BU.IsOSWindows10='BU.Main.OS.IsOSWindows10';
-alias BU.IsOSWindows11='BU.Main.OS.IsOSWindows11';
-alias BU.IsOSLinuxWSL1='BU.Main.OS.IsOSLinuxWSL1';
-alias BU.IsOSLinuxWSL2='BU.Main.OS.IsOSLinuxWSL2';
+alias BU.IsOSWindows10='BU.Main.OS.IsWindows10';
+alias BU.IsOSWindows11='BU.Main.OS.IsWindows11';
+alias BU.IsOSLinuxWSL1='BU.Main.OS.IsLinuxWSL1';
+alias BU.IsOSLinuxWSL2='BU.Main.OS.IsLinuxWSL2';
 
 # -----------------------------------------------
 
