Working on the Hardware module's config and init files, and added folders for specific operating systems in the Hardware module's library folder

--- a/install/.Bash-utils/config/modules/Hardware/Drive.conf
+++ b/install/.Bash-utils/config/modules/Hardware/Drive.conf
@@ -3,13 +3,15 @@
 # Disabling the SC2034 warning from Shellcheck (SC2034: <Variable name> appears unused. Verify use (or export if used externally)), because of the huge number of global variables declared in the configuration files, but only used in the library files.
 # shellcheck disable=SC2034
 
-# This configuration file stores motherboard-related global variables.
+# This configuration file stores hard drive-related global variables.
 
 # ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;; #
 
 ######################################## DEFINING VARIABLES #######################################
 
 #### DEFINING THE NEEDED RESOURCES
+
+##
 
 # Feel free to define any needed resources (functions, etc...) here.
 
