Working on the Hardware module's config and init files

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -26,7 +26,7 @@
 ## "lib" FOLDER'S CONTENT.
 
 # Bash Utils "Hardware" module's library directory                                                  |   Default parent folder --> "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH/" (Bash-utils/lib/functions).
-__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")" || { printf ""     "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")" || { "$(printf "" "")" "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
 
 # -----------------------------------------------
 
@@ -55,15 +55,44 @@ __BU_HARDWARE_MODULE_CONF_FILE_TOUCHPAD_PATH="";
 ## HARDWARE MODULE'S INITIALIZER PATH
 
 # Hardware module's initializer file.
-__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH" "Initializer.sh")" || { printf "" "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH" "Initializer.sh")" || { "$(printf "" "")" "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
 
 # -----------------------------------------------
 
 ## HARDWARE MODULE'S "functions" FOLDER'S SUB-FOLDERS CONTENT
 
-# Main module's library functions folder's path.
-__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH/"*.lib);
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « main » module's functions folder's library « .lib » file TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+# Path to the function files of the Hardware module's library, according to the current operating system.
+if BU.Main.OS.IsFreeBsd || BU.Main.OS.IsNetBsd || BU.Main.OS.IsOpenBsd; then
+    if      BU.Main.OS.IsFreeBsd;   then v_hardware_modinit_bsd_sys="FreeBSD";
+    elif    BU.Main.OS.IsNetBsd;    then v_hardware_modinit_bsd_sys="NetBSD";
+    elif    BU.Main.OS.IsOpenBsd;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
+
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "BSD")";
+
+    __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : $v_hardware_modinit_bsd_sys) TO SOURCE (NOT SOURCED YET)"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+fi
+
+BU.Main.OS.IsHaiku && {
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Haiku")";
+
+    __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+}
+
+BU.Main.OS.IsLinux && {
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Linux")";
+
+    __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+}
+
+BU.Main.OS.IsOSX && {
+    __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "OSX")";
+
+    __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+}
 
 # -----------------------------------------------
 
