Corrected the case on six function calls

--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -73,10 +73,10 @@ __BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$
 ## HARDWARE MODULE'S "functions" FOLDER'S SUB-FOLDERS CONTENT
 
 # Path to the function files of the Hardware module's library, according to the current operating system.
-if BU.Main.OS.IsFreeBsd || BU.Main.OS.IsNetBsd || BU.Main.OS.IsOpenBsd; then
-    if      BU.Main.OS.IsFreeBsd;   then v_hardware_modinit_bsd_sys="FreeBSD";
-    elif    BU.Main.OS.IsNetBsd;    then v_hardware_modinit_bsd_sys="NetBSD";
-    elif    BU.Main.OS.IsOpenBsd;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
+if BU.Main.OS.IsFreeBSD || BU.Main.OS.IsNetBSD || BU.Main.OS.IsOpenBSD; then
+    if      BU.Main.OS.IsFreeBSD;   then v_hardware_modinit_bsd_sys="FreeBSD";
+    elif    BU.Main.OS.IsNetBSD;    then v_hardware_modinit_bsd_sys="NetBSD";
+    elif    BU.Main.OS.IsOpenBSD;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "BSD")";
 
