--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -159,4 +159,4 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIST_CONFIG_FILES
 
 # -----------------------------------------------
 
-## END OF THE "Hardware" MODULE'S GLOBAL VARIABLES DEFINITION
+## END OF THE DEFINITION OF THE GLOBAL VARIABLES OF THE "HARDWARE" MODULE.
