--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -79,30 +79,34 @@ if BU.Main.OS.IsFreeBSD || BU.Main.OS.IsNetBSD || BU.Main.OS.IsOpenBSD; then
     elif    BU.Main.OS.IsOpenBSD;   then v_hardware_modinit_bsd_sys="OpenBSD"; fi
 
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "BSD")";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system.";                               "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : $v_hardware_modinit_bsd_sys) TO SOURCE (NOT SOURCED YET)"    "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : $v_hardware_modinit_bsd_sys) TO SOURCE (NOT SOURCED YET)"      "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 fi
 
 BU.Main.OS.IsHaiku && {
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Haiku")";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system.";                               "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
 BU.Main.OS.IsLinux && {
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "Linux")";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system.";                               "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
 BU.Main.OS.IsOSX && {
     __BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO="$(BU.ModuleInit.FindPath "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH" "OSX")";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" 'Dirpath' "This variable stores the path to the folder containing the library files needed for the $(BU.Main.Decho.Decho.Path "Hardware") module and designed for the current operating system.";                               "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))"
 
     __BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO/"*.lib);
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the « Hardware » module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
 # -----------------------------------------------
