--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -95,7 +95,7 @@ __BU_MAIN_PROJECT_ALIAS_FILE_PATH="$__BU_MAIN_PROJECT_ALIAS_FILE_PARENT/$__BU_MA
 # __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH     --> Default value : "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME"
 
 __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH";
-__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME="fgcolors.tmp";
+__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME="bgcolors.tmp";
 __BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_NAME";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_BG_CODE_FILE_PARENT" 'Dirpath'	"This global variable stores the path to the Decho background color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))";
