--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -84,42 +84,51 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES
 
 # -----------------------------------------------
 
+## SUBSTRINGS
+
+# Splitting a string into substrings.
+__BU_MAIN_TXT_ERR_SUBSTR_DELIM=' [/|\] ';
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "$__BU_MAIN_TXT_ERR_SUBSTR_DELIM" "String" "This global variable stores the string which serves as a delimiter for separating a string into substrings" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+
+# -----------------------------------------------
+
 ## TEXT FORMATTING
 
-# Wrapping the code in a function in order to prevent the execution of the command substitutions, in order to avoid bugs to be ignored while sourcing the configuration files in the main module's initializer file's "BU.Main.Initializer.SourceConfig()" function's loop.
+# Wrapping the code in a function to prevent the command substitutions from being executed, so that bugs are not ignored when sourcing configuration files in the loop of the "BU.Main.Initializer.SourceConfig()" function of the main module's initializer file.
 function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 {
     # Blink
-    __BU_MAIN_TXT_FMT_BLINK="$(BU.Main.Checkings.CheckTextFormat                'blink' '5'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_blink_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_BLINK_RESET="$(BU.Main.Checkings.CheckTextFormat          'sgr0'  '25'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK_RESET'           "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_blink_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BLINK="$(BU.Main.Checkings.CheckTextFormat                'blink' '5'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_blink_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BLINK_RESET="$(BU.Main.Checkings.CheckTextFormat          'sgr0'  '25'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK_RESET'           "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_blink_reset_lineno="$LINENO";
 
     # Bold
-    __BU_MAIN_TXT_FMT_BOLD="$(BU.Main.Checkings.CheckTextFormat                 'bold'  '1'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD'                  "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_bold_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU.Main.Checkings.CheckTextFormat           ''      '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD_RESET'            "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_bold_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BOLD="$(BU.Main.Checkings.CheckTextFormat                 'bold'  '1'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD'                  "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_bold_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU.Main.Checkings.CheckTextFormat           ''      '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD_RESET'            "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_bold_reset_lineno="$LINENO";
 
     # Dim
-    __BU_MAIN_TXT_FMT_DIM="$(BU.Main.Checkings.CheckTextFormat                  'dim'   '2'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM'                   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_dim_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_DIM_RESET="$(BU.Main.Checkings.CheckTextFormat            ''      '22'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM_RESET'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_dim_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_DIM="$(BU.Main.Checkings.CheckTextFormat                  'dim'   '2'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM'                   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_dim_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_DIM_RESET="$(BU.Main.Checkings.CheckTextFormat            ''      '22'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM_RESET'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_dim_reset_lineno="$LINENO";
 
     # Hidden (useful for password typing).
-    __BU_MAIN_TXT_FMT_HIDDEN="$(BU.Main.Checkings.CheckTextFormat               ''      '8'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_hidden_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU.Main.Checkings.CheckTextFormat         ''      '28'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_hidden_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_HIDDEN="$(BU.Main.Checkings.CheckTextFormat               ''      '8'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_hidden_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU.Main.Checkings.CheckTextFormat         ''      '28'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_hidden_reset_lineno="$LINENO";
 
     # Italic
-    __BU_MAIN_TXT_FMT_ITALIC="$(BU.Main.Checkings.CheckTextFormat               'sitm' '3'              '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_italic_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU.Main.Checkings.CheckTextFormat         'ritm' '23'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_italic_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_ITALIC="$(BU.Main.Checkings.CheckTextFormat               'sitm' '3'              '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_italic_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU.Main.Checkings.CheckTextFormat         'ritm' '23'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_italic_reset_lineno="$LINENO";
 
     # Reset
-    __BU_MAIN_TXT_FMT_RESET="$(BU.Main.Checkings.CheckTextFormat                'sgr0'  '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_RESET="$(BU.Main.Checkings.CheckTextFormat                'sgr0'  '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_reset_lineno="$LINENO";
 
     # Strikethrough
-    __BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU.Main.Checkings.CheckTextFormat        ''      '9'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH'         "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_strikethrough_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU.Main.Checkings.CheckTextFormat  ''      '29'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_strikethrough_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU.Main.Checkings.CheckTextFormat        ''      '9'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH'         "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_strikethrough_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU.Main.Checkings.CheckTextFormat  ''      '29'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_strikethrough_reset_lineno="$LINENO";
 
 
     # Underline
-    __BU_MAIN_TXT_FMT_UNDERLINE="$(BU.Main.Checkings.CheckTextFormat            'smul'  '4'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_underline_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU.Main.Checkings.CheckTextFormat      'rmul'  '24'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'       "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; __bu_main_txt_fmt_underline_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_UNDERLINE="$(BU.Main.Checkings.CheckTextFormat            'smul'  '4'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_underline_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU.Main.Checkings.CheckTextFormat      'rmul'  '24'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'       "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_underline_reset_lineno="$LINENO";
 
 
     # Blink
@@ -152,7 +161,6 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
     # Underline
     printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE";             BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_UNDERLINE'               "$__BU_MAIN_TXT_FMT_UNDERLINE"              'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "Underline")"       "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_underline_lineno";
     printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET";       BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'         "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET"        'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "Underline")"       "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_underline_reset_lineno";
-
 }
 
 BU.Main.ModConfig.Text.WrapTextFormattingSubSection || return 1;
