--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -109,6 +109,9 @@ BU.Main.OS.IsOSX && {
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
+# If the module is loaded on an unsupported OS.
+if [ -z "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" ] || [ -z "$__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY" ]
+
 # -----------------------------------------------
 
 
@@ -126,7 +129,7 @@ BU.Main.OS.IsOSX && {
 # after the Hardware module's initialization.
 
 # It MUST NOT store any value now, it will be processed in the Hardware module's initializer file.
-__BU_HARDWARE_MODULE_MODIFIED_STATUS_VARS_ARRAY=()
+__BU_HARDWARE_MODULE_MODIFIED_STATUS_VARS_ARRAY=();
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « Hardware » module's by the user" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
