--- a/install/.Bash-utils/config/modules/Hardware/module.conf
+++ b/install/.Bash-utils/config/modules/Hardware/module.conf
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 # Disabling the SC2034 warning from Shellcheck (SC2034: <Variable name> appears unused. Verify use (or export if used externally)), because of the huge number of global variables declared in the configuration files, but only used in the library files.
-# shellcheck disable=SC2034
+# shellcheck disable=SC2016,SC2034,2059
 
 # This configuration file stores the global variables related to the "Hardware" module initialization process.
 
@@ -34,8 +34,8 @@ __BU_HARDWARE_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_
 ## "lib" FOLDER'S CONTENT.
 
 # Bash Utils "Hardware" module's library directory                                                  |   Default parent folder --> "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH/" (Bash-utils/lib/functions).
-__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")" || { "$(printf "" "")" "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH"                       'Dirpath' "This global variable stores the path of the « Hardware » module's functions folder"                          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")")"  || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"  "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH' "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH"                                       'Dirpath' "This global variable stores the path of the « Hardware » module's functions folder"                                  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # -----------------------------------------------
 
@@ -66,7 +66,7 @@ __BU_HARDWARE_MODULE_CONF_FILE_TOUCHPAD_PATH="$(BU.ModuleInit.FindPath "$__BU_HA
 ## HARDWARE MODULE'S INITIALIZER PATH
 
 # Hardware module's initializer file.
-__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH" "Initializer.sh")" || { "$(printf "" "")" "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
+__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU.ModuleInit.FindPath "$__BU_MODULE_INIT_CURRENT_MODULE_INIT_PATH" "Initializer.sh")" || { printf "IN « %s », LINE « %s » --> BASH-UTILS ERROR : Unable to define the path to store in the « %s » global variable\n"                    "$(basename "${BASH_SOURCE[0]}")" "$LINENO" '$__BU_HARDWARE_MODULE_LIB_FILE_INITIALIZER_FILE_PATH'; BU.ModuleInit.MsgAbort; BU.ModuleInit.AskPrintLog; BU.ModuleInit.IsInScript && exit 1; return 1; };
 
 # -----------------------------------------------
 
@@ -109,8 +109,8 @@ BU.Main.OS.IsOSX && {
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "This array stores the path of each « .lib » library file in the functions folder of the $(BU.Main.Decho.Decho.Path "Hardware") module according to the current operating system (Current OS : Linux) TO SOURCE (NOT SOURCED YET)"                            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 }
 
-# If the module is loaded on an unsupported OS.
-if [ -z "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" ] || [ -z "$__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY" ]
+# If the module is loaded on an unsupported OS. <-- TODO
+if [ -z "$__BU_HARDWARE_MODULE_LIB_MOD_DIR_PATH_INFO" ] || [ -z "${__BU_HARDWARE_MODULE_FUNCTIONS_FILES_PATH_ARRAY[*]}" ]; then return 1; fi
 
 # -----------------------------------------------
 
