Adding error codes in the main module's "module.conf" configuration file

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -32,8 +32,8 @@ if [ -d "/usr/local/lib/Bash-utils" ]; then
     __BU_MAIN_ROOT_DIR_PATH='/usr/local/lib/Bash-utils';
 
 # If the Bash Utils root directory is installed in the hidden directory, normally located in the user's home directory.
-elif [ -d "$__BU_MODULE_INIT__ROOT/Bash-utils" ]; then
-    __BU_MAIN_ROOT_DIR_PATH="$__BU_MODULE_INIT__ROOT/Bash-utils";
+elif [ -d "$__BU_MODULE_INIT__ROOT/.Bash-utils" ]; then
+    __BU_MAIN_ROOT_DIR_PATH="$__BU_MODULE_INIT__ROOT/.Bash-utils";
 
 # Else, if the library's root directory doesn't exists in at least one of the above paths, then the value stored in the "Bash-utils-root-val.path" is used as the path of this root directory.
 else
@@ -64,6 +64,9 @@ else
 
         # Checking if the library's root folder path written in this file is valid.
         if [ ! -d "$__BU_MAIN_ROOT_DIR_PATH" ]; then
+            # shellcheck disable=SC2059
+            BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__INVALID_ROOT_DIR_PATH";
+
             echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
             echo "The Bash Utils library's root folder's path written in the « $__BU_MODULES_UTILS_LIB_FILE_PATH » file was not found in your hard drive." >&2; echo >&2;
@@ -82,10 +85,17 @@ else
 
     # Checking if the "Bash-utils-root-val.path" exists AND if this file is empty (no library's path specified).
     elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
+        # shellcheck disable=SC2059
+        BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__EMPTY_ROOT_DIR_STORAGE_FILE_PATH";
+
+        ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
+
         echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> WARNING !" >&2; echo >&2;
 
-        echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » exists, but is empty." >&2; echo >&2;
+        echo "The Bash Utils's root folder's path storage file « $(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH") » exists, but is empty." >&2; echo >&2;
         echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
+
+        unset ____v_bu_module_init__bu_main_root_dir_path__chk_err;
 
         BU.ModuleInit.MsgAbort;
 
@@ -95,8 +105,13 @@ else
 
 		return 1;
 
-    # Checking if the current user cannot read the "Bash-utils-root-val.path" (file owned by the "root" user).
-    elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_PATH" ]; then
+    # Checking if the current user cannot read the "Bash-utils-root-val.path" (file created and owned by the "root" user).
+    elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
+        # shellcheck disable=SC2059
+        BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__UNALLOWED_TO_READ_ROOT_DIR_STORAGE_FILE_PATH"
+
+        ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
+
         echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
         echo "You don't have the right to read the Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH »" >&2;
@@ -104,6 +119,8 @@ else
 
         echo "Please execute this script as root user, or change the ownership of the « $__BU_MAIN_ROOT_DIR_PATH » file, or create a new file, and rename the file to find in the « $__BU_MODULE_INIT__INITIALIZER_PATH » file";
         echo "If you opt for the last solution, please find the line containing the string « __BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_NAME= » in the « DEFINING GLOBAL VARIABLES » subsection"; echo >&2;
+
+        unset ____v_bu_module_init__bu_main_root_dir_path__chk_err;
 
         BU.ModuleInit.MsgAbort;
 
@@ -115,10 +132,17 @@ else
 
     # Handling the absence of the "Bash-utils-root-val.path" file.
     elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
+        # shellcheck disable=SC2059
+        BU.ModuleInit.PrintLogError "$(printf "" "")" "$(( LINENO - 2 ))" "ERR_BU_MAIN_MOD_CONF__ABSENT_ROOT_DIR_STORAGE_FILE_PATH"
+
+        ____v_bu_module_init__bu_main_root_dir_path__chk_err="$(BU.ModuleInit.CheckPath "$__BU_MAIN_ROOT_DIR_PATH")";
+
         echo >&2; echo "IN « ${BASH_SOURCE[0]} », LINE $LINENO --> ERROR !" >&2; echo >&2;
 
-        echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » doesn't exists" >&2; echo >&2;
+        echo "The Bash Utils's root folder's path storage file « $____v_bu_module_init__bu_main_root_dir_path__chk_err » doesn't exists" >&2; echo >&2;
         echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2;
+
+        unset ____v_bu_module_init__bu_main_root_dir_path__chk_err;
 
         BU.ModuleInit.MsgAbort;
 
